// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Password Field Test Test natural text field 1`] = `
<input
  name="username"
  onChange={[Function]}
  value=""
/>
`;

exports[`Password Field Test Test text field with onChange function property 1`] = `
<input
  name="username"
  onChange={[Function]}
  value=""
/>
`;

exports[`Password Field Test Test text field with placeholder property 1`] = `
<input
  name="username"
  onChange={[Function]}
  placeholder="Type your name..."
  value=""
/>
`;
